# nanokontrol

./: CMakeLists.txt  README  package.xml
launch/: nanokontrol.launch  nanokontrol_mav.launch
scripts/: korg_mapping.py
src/: kontrol.cpp
