<?xml version="1.0"?>
<package>
  <name>nanokontrol</name>
  <version>0.0.0</version>
  <description>The nanokontrol package</description>
  <author>Michael Watterson</author>
  <author>Gary P. Scavone</author>
  <maintainer email="wami@seas.upenn.edu">mike</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>